docs(agents): 规则文件砍冗余，留硬约束与静默失效类断言
- 根：压回 3000 字符预算内，删与用户级规则重复的推送条与可 find 的目录清单，索引 8 行压到 5 行
- 后端：删重复 install 条、seed 密码/登录锁/JDK26 备忘、过期配置值、IDE 误报独立节；
  安全段压成断言（去掉限流具体数字与可从代码读出的机制），ai 段去机制细节留不变量
- 前端：修失效的懒加载参考路径，剔除非依赖的库名

三类只会在高频路径上踩、且踩了直接静默出错的断言全部保留。